# real-estate-scout-optimizer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: MAICEN_1125_M3_U1&U2_Assignment input.csv
modules/: __init__.py  analysis.py  data_prep.py  data_validation.py  scoring.py  utils.py  visualization.py  visualization_plotly.py
